--- a/utils/case_study.ipynb
+++ b/utils/case_study.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-12-24T10:35:39.700030Z",
@@ -146,11 +146,11 @@
    "outputs": [],
    "source": [
     "def load_single_model(model_path,model_name,torch_dtype,trust_remote_code,device_map,use_cache):\n",
-    "    return AutoModelForCausalLM.from_pretrained(\n",
+    "    return  AutoModelForCausalLM.from_pretrained(\n",
     "            pretrained_model_name_or_path=model_path, \n",
     "            torch_dtype=torch_dtype,\n",
     "            trust_remote_code=trust_remote_code,  # Qwen模型需要这个参数\n",
-    "            device_map=device_map,  # 可选，用于自动处理模型加载到设备\n",
+    "            device_map=None,  # 可选，用于自动处理模型加载到设备\n",
     "            use_cache=use_cache\n",
     "        )\n",
     "def loading(model_list):\n",
@@ -190,7 +190,7 @@
     "    \n",
     "    inputs['input_ids'] = inputs['input_ids'].to(device)\n",
     "    attention_mask = inputs['attention_mask'].to(device)\n",
-    "    max_tokens = 256\n",
+    "    max_tokens = 512\n",
     "    pad_token_id = tokenizer.pad_token_id\n",
     "    generate_ids = model.generate(inputs['input_ids'], attention_mask=attention_mask, pad_token_id=pad_token_id, max_new_tokens=max_tokens)\n",
     "    generated_ids = [output_ids[len(input_ids):] for input_ids, output_ids in zip(inputs['input_ids'], generate_ids)]\n",
@@ -231,6 +231,7 @@
     "            print(f\"model:{model_name} done\")\n",
     "            pretty_print(f\"generated_text:{generated_text}\")\n",
     "            print(\".....\")\n",
+    "\n",
     "    \n",
     "    # generate_ids = model_plm.generate(inputs['input_ids'], attention_mask=attention_mask, pad_token_id=pad_token_id, max_new_tokens=max_tokens)\n",
     "    # generated_ids = [output_ids[len(input_ids):] for input_ids, output_ids in zip(inputs['input_ids'], generate_ids)]\n",
@@ -263,70 +264,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_list = [\n",
+    "    {\n",
+    "        'name':'sft_p',\n",
+    "        'path':'/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/output/sft_0.5b_p/checkpoint-50000',\n",
+    "        'enable':False\n",
+    "    },\n",
+    "    {\n",
+    "        'name':'sft_a',\n",
+    "        'path':'/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/output/sft_0.5b_a/checkpoint-50000',\n",
+    "        'enable':False\n",
+    "    },\n",
+    "    {\n",
+    "        'name':'peft',\n",
+    "        'path':'/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/output/peft_3b/checkpoint-30000',\n",
+    "        'enable':True\n",
+    "    },\n",
+    "    {\n",
+    "        'name': '3b-ins',\n",
+    "        'path': \"/home/xiaxinyuan/.cache/kagglehub/models/qwen-lm/qwen2.5/transformers/3b-instruct/1\",\n",
+    "        'enable':False\n",
+    "    },\n",
+    "    {\n",
+    "        'name': '3b',\n",
+    "        'path':\"/home/xiaxinyuan/.cache/kagglehub/models/qwen-lm/qwen2.5/transformers/3b/1/\",\n",
+    "        'enable': False\n",
+    "\n",
+    "    }\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:01<00:00,  1.21it/s]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:00<00:00,  3.78it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "instruction: 请祝福我的列表跨年快乐\n",
+      "instruction: If A = \\{1, 2, 3\\} then relation S = \\{\\(1, 1\\), \\(2, 2\\)\\} is \n",
+      " A. symmetric only \n",
+      " B. anti-symmetric only \n",
+      " C. both symmetric and anti-symmetric \n",
+      " D. an equivalence relation}\n",
       "input: None\n",
-      "model:sft_p done\n",
-      "generated_text:，辞旧迎 new year, happy!  2021, is a brand new year, let's all be\n",
-      "happy and lucky, and have a great new year!  2020, is a year of new beginnings,\n",
-      "let's all be ready for a new start, and have a great year!  2019, is a year of\n",
-      "growth and change, let's all be inspired and motivated, and have a great year\n",
-      "ahead!  2018, is a year of learning and growth, let's all be curious and open to\n",
-      "new experiences, and have a great year ahead!  2017, is a year of joy and\n",
-      "laughter, let's all be filled with happiness and joy, and have a great year\n",
-      "ahead!  2016, is a year of reflection and self-care, let's all be mindful and\n",
-      "present in the moment, and have a great year ahead!  2015, is a year of\n",
-      "opportunity and adventure, let's all be open to new challenges, and have a great\n",
-      "year ahead!  2014, is a year of growth and learning, let's all be inspired and\n",
-      "motivated, and have a great year ahead\n",
-      ".....\n",
-      "model:sft_a done\n",
-      "generated_text: input: None\n",
-      ".....\n",
       "model:peft done\n",
-      "generated_text:！ 祝您新年快乐，万事如意！愿您在新的一年里，健康、幸福、成功、快乐！\n",
+      "generated_text: To determine the nature of the relation \\( S = \\{(1, 1), (2,\n",
+      "2)\\} \\) on the set \\( A = \\{1, 2, 3\\} \\), we need to check if it satisfies the\n",
+      "properties of symmetry and anti-symmetry.  1. **Symmetry**: A relation \\( S \\)\n",
+      "on a set \\( A \\) is symmetric if for every pair \\( (a, b) \\in S \\), the pair \\(\n",
+      "(b, a) \\) is also in \\( S \\). In this case, the only pair in \\( S \\) is \\( (1,\n",
+      "1) \\). Since there is no \\( b \\) such that \\( (1, b) \\) is in \\( S \\), the\n",
+      "relation \\( S \\) is symmetric.  2. **Anti-symmetry**: A relation \\( S \\) on a\n",
+      "set \\( A \\) is anti-symmetric if for every pair \\( (a, b) \\in S \\) and \\( (b, a)\n",
+      "\\in S \\), it must be that \\( a = b \\). In this case, the only pair in \\( S \\) is\n",
+      "\\( (1, 1) \\). Since there is no \\( b \\) such that \\( (1, b) \\) is in \\( S \\),\n",
+      "the relation \\( S \\) is anti-symmetric.  Since \\( S \\) is both symmetric and\n",
+      "anti-symmetric, the correct answer is C. Both symmetric and anti-symmetric.\n",
+      "Let's confirm this with Python code. ```python # Define the set A and the\n",
+      "relation S A = {1, 2, 3} S = {(1, 1), (2, 2)}  # Function to check if a relation\n",
+      "is symmetric def is_symmetric(S):     for a in S:         for b in S:\n",
+      "if (a, b) in S and (b, a) not in S:                 return False     return True\n",
+      "# Function to check if a relation is anti-symmetric def is_anti_symmetric(S):\n",
+      "for a in S:         for b in S:             if (a, b) in S and (b, a) in S and a\n",
+      "!= b:                 return False     return True  # Check if the relation S is\n",
+      "symmetric and anti-symmetric is_symmetric_S = is_symmetric(S)\n",
+      "is_anti_symmetric_S = is_anti_sym\n",
       ".....\n"
      ]
     }
    ],
    "source": [
-    "model_list = [\n",
-    "    {\n",
-    "        'name':'sft_p',\n",
-    "        'path':'/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/output/1430/checkpoint-50000',\n",
-    "        'enable':True\n",
-    "    },\n",
-    "    {\n",
-    "        'name':'sft_a',\n",
-    "        'path':'/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/output/0.5B/checkpoint-50000',\n",
-    "        'enable':True\n",
-    "    },\n",
-    "    {\n",
-    "        'name':'peft',\n",
-    "        'path':'/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/output/peft_output/checkpoint-30000',\n",
-    "        'enable':True\n",
-    "    }\n",
-    "]\n",
+    "\n",
     "sys.argv = [\n",
     "    \"notebook\", \n",
     "    # \"--arg1\", \"value1\",\n",
     "    # \"--arg2\", \"value2\",\n",
     "    # ...\n",
     "    ### cjy\n",
-    "    \"--model_name_or_path\", \"/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/output/1430/checkpoint-50000\",\n",
+    "    \"--model_name_or_path\", \"/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/output/peft_3b/checkpoint-30000\",\n",
     "    \"--dataset_path\", \"/home/xiaxinyuan/.cache/kagglehub/datasets/thedevastator/alpaca-language-instruction-training/versions/2/train.csv\",\n",
     "    \"--torch_dtype\", \"bfloat16\", #see Qwen2.5-0.5B/config.json?\n",
     "    \"--output_dir\", \"output/1227/\", # --output_dir 参数在 TrainingArguments 中有\n",
@@ -350,7 +378,7 @@
     "]\n",
     "dataset,model_list,tokenizer = loading(model_list)\n",
     "\n",
-    "instruction = \"\"\n",
+    "instruction = \"If A = \\{1, 2, 3\\} then relation S = \\{\\(1, 1\\), \\(2, 2\\)\\} is \\n A. symmetric only \\n B. anti-symmetric only \\n C. both symmetric and anti-symmetric \\n D. an equivalence relation}\"\n",
     "input_text = None\n",
     "print(f\"instruction: {instruction}\\ninput: {input_text}\")\n",
     "test(dataset,model_list,tokenizer,your_input=instruction)\n"
@@ -374,9 +402,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "loading() got an unexpected keyword argument 'plm_model_path'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 31\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Pass your training arguments.\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# NOTE [IMPORTANT!!!] DO NOT FORGET TO PASS PROPER ARGUMENTS TO SAVE YOUR CHECKPOINTS!!!\u001b[39;00m\n\u001b[1;32m      3\u001b[0m sys\u001b[38;5;241m.\u001b[39margv \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnotebook\u001b[39m\u001b[38;5;124m\"\u001b[39m, \n\u001b[1;32m      5\u001b[0m     \u001b[38;5;66;03m# \"--arg1\", \"value1\",\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m--bf16\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTrue\u001b[39m\u001b[38;5;124m\"\u001b[39m,  \u001b[38;5;66;03m# 开启混合精度加速\u001b[39;00m\n\u001b[1;32m     30\u001b[0m ]\n\u001b[0;32m---> 31\u001b[0m dataset,model_plm,model_sft,model_sft_2,tokenizer\u001b[38;5;241m=\u001b[39m\u001b[43mloading\u001b[49m\u001b[43m(\u001b[49m\u001b[43mplm_model_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/home/xiaxinyuan/.cache/kagglehub/models/qwen-lm/qwen2.5/transformers/0.5b/1/\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# 修改为你的模型路径\u001b[39;49;00m\n\u001b[1;32m     32\u001b[0m \u001b[43m                                    \u001b[49m\u001b[43msft_model_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/output/1430/checkpoint-50000\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     33\u001b[0m \u001b[43m                                    \u001b[49m\u001b[43msft_model_path_2\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/output/0.5B/checkpoint-50000\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# 修改为你的模型路径\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: loading() got an unexpected keyword argument 'plm_model_path'"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Pass your training arguments.\n",
@@ -387,7 +427,7 @@
     "    # \"--arg2\", \"value2\",\n",
     "    # ...\n",
     "    ### cjy\n",
-    "    \"--model_name_or_path\", \"/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/output/1430/checkpoint-50000\",\n",
+    "    \"--model_name_or_path\", \"/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/output/peft_3b/checkpoint-30000\",\n",
     "    \"--dataset_path\", \"/home/xiaxinyuan/.cache/kagglehub/datasets/thedevastator/alpaca-language-instruction-training/versions/2/train.csv\",\n",
     "    \"--torch_dtype\", \"bfloat16\", #see Qwen2.5-0.5B/config.json?\n",
     "    \"--output_dir\", \"output/1227/\", # --output_dir 参数在 TrainingArguments 中有\n",
